@startuml PCSOverview

package "Player Controller System" {

    package "Core Components" {
        class Movement
        class RoleController
    }

    package "Ability Components" {
        class JumpAbility
        class CatVision
    }

    package "Feedback Components" {
        class CharacterFade
        class CharacterSound
        class InteractionPromptUI
    }
}

JumpAbility --> Movement : applies jump velocity

CatVision --> Movement : modifies speed
CatVision --> RoleController : checks role

RoleController --> Movement : applies role values
RoleController --> CharacterSound : provides role

@enduml